--- a/Tutorial/angular.html
+++ b/Tutorial/angular.html
@@ -1,10 +1,20 @@
-<html ng-app>
+<html ng-app="tutorialApp">
 <head>
     <meta charset="utf-8mb4"/>
     <title>AngularJS Tutorial</title>
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"/>
 </head>
-<body>
+<body ng-init="articles = ['Pizza Margherita', 'Pizza Tonno']">
+    <input type="text" ng-model="search">
+    <p ng-show="search">Du suchst gerade nach: {{search}}</p>
+    <table class="table" ng-controller="ArticlesCtrl">
+        <tr ng-repeat="article in articles | filter:search">
+            <td>{{article.id}}</td>
+            <td>{{article.name}}</td>
+            <td>{{article.price}}</td>
+        </tr>
+    </table>    
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
